--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -84,7 +84,7 @@ start_6 : "❗️ **Diperlukan Supergroup** ️\n\nUbah **grup** lu jadi **grup 
 start_7 : "**Gc Diblacklist mampus**\n\nMampus GC lu diblacklist sama Owner/Sudo!!. Coba lu tanya ke mereka kenapa gc lu di blacklist, disini : [Sudolist]({0})"
 
 # Help
-help_1 : "Klik tombol dibawah jink kalo mau tau informasi lebih. Kalo lo Dapet bug atau Lo ga ngerti tanya ke @pyyaml atau lo tanya di Group @NiskalaSupport.\n\nPerintah dimulai pake : /"
+help_1 : "Klik tombol dibawah jink kalo mau tau informasi lebih. Kalo lo Dapet bug atau Lo ga ngerti tanya ke @Jrsss777.\n\nPerintah dimulai pake : /"
 help_2 : "Hubungi saya di PM untuk bantuan."
 
 # Settings
