--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -1,4 +1,4 @@
-name : toxic
+name : 🏴‍☠️toxic
 #By @Jrsss777
 
 # General Strings
@@ -252,7 +252,6 @@ S_B_2 : "🔧 Pengaturan"
 S_B_3 : "👥 Group"
 S_B_4 : "⚡ Channel"
 S_B_5 : "✚ Tambahin ke group"
-S_B_6 : "⚡ Repository"
 S_B_7 : "👨‍💻 Owner ganteng"
 S_B_8 : "🔎 Menu Perintah."
 
