--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -252,7 +252,7 @@ S_B_2 : "🔧 Pengaturan"
 S_B_3 : "👥 Group"
 S_B_4 : "⚡ Channel"
 S_B_5 : "✚ Tambahin ke group"
-S_B_6 : "😱 Repo
+S_B_6 : "😱 Repo"
 S_B_7 : "👨‍💻 Owner ganteng"
 S_B_8 : "🔎 Menu Perintah."
 
